# web_bms

./: # 出现提示时，连续按 3 次回车（不要输入密码）  # 出现提示时，连续按 3 次回车（不要输入密码）.pub  CMakeLists.txt  DOCUMENTATION.md  FREETYPE_已启用.txt  Makefile  Makefile.simple  Makefile.touch_test  README.md  build.sh  check_build.sh  check_font.sh  check_font_loading.sh  clean_and_compile.sh  compile.sh  deploy.sh  fix_can_monitor.py  fix_uds_logs.sh  lv_conf.h  lv_drv_conf.h  lvgl_app  main.c  rebuild.sh  test_button_control.py  tina_quick.sh  touch_test.c  uds_websocket.html  字体优化_使用说明.txt  快速编译FreeType.sh  编译.sh
docs/: api.md  board_ws_config_mqtt_example.txt  openapi.yaml  wsl_windows_mqtt_setup.md
drivers/: display_drv.c  display_drv.h  touch_drv.c  touch_drv.h  touch_drv_alt.c
logic/: app_manager.c  app_manager.h  can_frame_buffer.c  can_frame_buffer.h  can_frame_dispatcher.c  can_frame_dispatcher.h  can_handler.c  can_handler.h  can_mqtt_engine.c  can_mqtt_engine.h  can_recorder.c  can_recorder.h  device_http_server.c  device_http_server.h  file_transfer.c  file_transfer.h  file_transfer_progress.c  file_transfer_progress.h  hardware_monitor.c  hardware_monitor.h  headless_stubs.c  mqtt_client.c  mqtt_client.h  remote_transport.c  remote_transport.h  s19_parser.c  s19_parser.h  uds_handler.c  uds_handler.h  ui_remote_control.c  ui_remote_control.h  ws_client.c  ws_client.h  ws_command_handler.c  ws_command_handler.h
server/: CLOUD_DEPLOY.md  bms_collector.py  can_parser.py  can_parser_backup.py  can_parser_fixed.py  can_schema.json  config.json  config.json.example  config.py  dbc_service.py  (+24 more)
(+670 files in other folders)
